--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-"name": "avalacao-final",
-"version": "1.0.0",
-"description": "",
-"author": "github.com/carvalheiro",
-"type": "module",
-"dependencies": {
-  "express": "^4.18.2"
-}
+  "name": "avalacao-final",
+  "version": "1.0.0",
+  "author": "github.com/carvalheiro",
+  "type": "module",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  },
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "license": "ISC",
+  "description": ""
 }
